Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase04_04.out
<Type> ::= ID
Parse error on line 12:
...er s = new Solver()s}} class Solver 
----------------------^
Expecting ';', '+', '-', '*', '/', '<', '<=', '>=', '>', '==', '!=', '&&', '||', '.', ')', ','